[package]
name = "kompakt"
version = "0.1.0"
edition = "2021"
authors = ["Ojietohamen Samuel <seekersoftec@gmail.com>"]
description = "A brotli compressor and decompressor that with an interface avoiding the rust stdlib. This makes it suitable for embedded devices and kernels. It is designed with a pluggable allocator so that the standard lib's allocator may be employed. The default build also includes a stdlib allocator and stream interface. Disable this with --features=no-stdlib. All included code is safe."
homepage = "https://github.com/seekersoftec/kompakt"
repository = "https://github.com/seekersoftec/kompakt"
keywords = ["brotli", "decompression", "lz77", "huffman", "nostd", "compression", "entropy-coding", "machine-learning", "kgb", "deep-learning"]
license = "MIT OR Apache-2.0 OR BSL-1.0"
categories = ["compression", "science", "no-std"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constriction = "0.3.0"
probability = "0.17" 