[package]
name = "kompakt"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Ojietohamen <seekersoftec@gmail.com>"]
description = "A smart compressor and decompressor."
homepage = "https://github.com/FortesenseLabs/kompakt"
repository = "https://github.com/FortesenseLabs/kompakt"
keywords = [
    "brotli",
    "decompression",
    "lz77",
    "huffman",
    "nostd",
    "compression",
    "entropy-coding",
    "machine-learning",
    "kgb",
    "deep-learning",
]
license = "MIT OR Apache-2.0 OR BSL-1.0"
categories = ["compression", "science", "no-std"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4"

[dependencies]
constriction = "0.3.0"
probability = "0.20.3"
